	rgb() and hsv() functions, or as a string of the form "#RRGGBBAA".

	NOTE: most devices draw nothing if a colour is not opaque,
	but PDF and Quartz devices will render semitransparent colours.

	A new argument 'alpha' to the function col2rgb() 
        provides the ability to return the alpha component of
	colours (as well as the red, green, and blue components).

    o	source() with 'echo = TRUE' uses the function source attribute
	when displaying commands as they are parsed.

    o   setClass() and its utilities now warn if either superclasses
        or classes for slots are undefined.  (Use setOldClass to
        register S3 classes for use as slots)

    o	str(obj) now displays more reasonably the STRucture of S4 objects.

	It's also improved for language objects and lists with promise
	components.

	The method for class "dendrogram" has a new argument 'stem' and
	indicates when it's not printing all levels (as typically when
	e.g., 'max.level = 2').

    o	system.time() has a new argument 'gcFirst' which, when TRUE,
	forces a garbage collection before timing begins.

    o	tail() of a matrix now displays the original row numbers.

    o	The default method for text() now coerces a factor to character
	and not to its internal codes.  This is incompatible with S
	but seems what users would expect.

    	It now also recycles (x,y) to the length of 'labels' if that
	is longer.  This is now compatible with grid.text() and
	S. (See also PR#7084.)

    o	TukeyHSD() now labels comparisons when applied to an
	interaction in an aov() fit.  It detects non-factor terms in
	'which' and drops them if sensible to do so.

    o	There is now a replacement method for window(), to allow a
	range of values of time series to be replaced by specifying the
	start and end times (and optionally a frequency).

    o	The screen devices x11(), windows() and quartz() have a new
	argument 'bg' to set the default background colour.

